<resources>
    <string name="app_name">Form</string>
    <string name="Name">Enter Your Name</string>
    <string name="Num">Enter Your Number</string>
    <string name="email">Enter Your E-mail Address</string>
    <string name="password">Enter Your Password</string>
    <string name="cpassword">Conform your Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
