<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_100sdp">


        <EditText
            android:id="@+id/edtusename"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Name"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_10sdp">


        <EditText
            android:id="@+id/edtnum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Num"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp">


        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp">


        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:inputType="text"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp">


        <EditText
            android:id="@+id/edtCpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/cpassword"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:maxLines="1" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_100sdp"
        app:cardBackgroundColor="#070A52"
        app:cardCornerRadius="@dimen/_22sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="REGISTER"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>